--- a/app/templates/app/post/dashboard.html
+++ b/app/templates/app/post/dashboard.html
@@ -39,14 +39,20 @@
             <td class="{% if application.status_E == 'PENDING' %}text-center fw-bold table-secondary{% elif application.status_E == 'ACCEPTED' %} text-center text-success fw-bold table-success{% else %} text-center text-danger fw-bold table-danger{% endif %}">
               {{ application.status_E }}
             <td><a href="{% url 'view_cv' application.id %}" class="btn btn-primary btn-sm col-sm-25">View CV</a></td>
-
+   
             <form method="POST" action="">
               {% csrf_token %}
 
-              {% if application.highlight %}
-              <td><button type="submit" name="hl" value=application.id class ="btn btn-primary btn-sm mx-2"><i class="bi bi-star-fill bi-lg text-warning"></i></button></td>
+              {% if application.highlight or dashboard.highlight %}
+              <td><button type="submit" name="hl" value=application.id class="btn btn-lg mx-2"
+                style="background-color: transparent; border: none; padding: 0;">
+                    <i class="bi bi-star-fill bi-lg text-warning" style="color: #999;"></i>
+                </button></td>
               {% else %}
-              <td><button type="submit" name="hl" value=application.id class ="btn btn-secondary btn-sm mx-2"><i class="bi bi-star bi-lg"></i></button></td>
+              <td><button type="submit" name="hl" value=application.id class="btn btn-lg mx-2"
+                style="background-color: transparent; border: none; padding: 0;">
+            <i class="bi bi-star bi-lg " style="color: #999;"></i>
+        </button></td>
               {% endif %}
 
           </form>
