Add message from companies in History

--- a/app/templates/app/post/history.html
+++ b/app/templates/app/post/history.html
@@ -22,7 +22,7 @@
                                 <th scope="col">Applied time</th>
                                 <th scope="col" class="text-center">Status</th>
                                 <th scope="col"></th>
-                            
+                                <th scope="col">Messages</th>
                             </tr>
                         </thead>
                         <tbody class="table-group-divider"> <!--Nội dung của từng cột-->
@@ -43,6 +43,26 @@
                                         </form>
                                     {% endif %}
                                 </td>
+                                <td>
+                                    <button type="submit" class="mx-5 btn btn-primary btn-sm col-sm-25 ms-0" data-bs-toggle="modal" data-bs-target="#staticBackdrop">View message</button>
+                                </td>
+                                <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h1 class="modal-title fs-5" id="staticBackdropLabel">Message from Company</h1>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                            </div>
+                                            <div class="modal-body">                            
+                                                MESSAGE WILL BE DISPLAYED HERE
+                                            </div>
+            
+                                            <div class="modal-footer">   
+                                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </tr>
                             {% endfor %}
                         </tbody>
