--- a/app/templates/app/user/profileE.html
+++ b/app/templates/app/user/profileE.html
@@ -80,8 +80,13 @@
                           <textarea id="address" name="address" rows="3" class="form-control" required>{{ em.address }}</textarea>
                         </div>
                         <div class="mb-3">
-                          <label for="city" class="form-label">City</label>
-                          <input type="text" id="city" name="city" value="{{ em.city }}" class="form-control" required>
+                            <label for="city" class="form-label">City</label>
+                            <select id="city" name="city" class="form-control" required>
+                                <option value="">{{em.city}}</option>
+                                {% for city, city_name in city_choices %}
+                                    <option value="{{ city }}">{{ city_name }}</option>
+                                {% endfor %}
+                            </select>
                         </div>
                         <div class="mb-3">
                           <label for="introduction" class="form-label">Introduction</label>
