--- a/app/templates/app/user/profileJF.html
+++ b/app/templates/app/user/profileJF.html
@@ -91,8 +91,13 @@
                           <textarea id="address" name="address" rows="3" class="form-control" required>{{ jf.address }}</textarea>
                         </div>
                         <div class="mb-3">
-                          <label for="city" class="form-label">City</label>
-                          <input type="text" id="city" name="city" value="{{ jf.city }}" class="form-control" required>
+                            <label for="city" class="form-label">City</label>
+                            <select id="city" name="city" class="form-control" required>
+                                <option value="">{{jf.city}}</option>
+                                {% for city, city_name in city_choices %}
+                                    <option value="{{ city }}">{{ city_name }}</option>
+                                {% endfor %}
+                            </select>
                         </div>
                         <div class="mb-3">
                           <label for="date-of-birth" class="form-label">Date of Birth</label>
