Users must fill in all important fills when Register account

--- a/app/templates/app/post/apply.html
+++ b/app/templates/app/post/apply.html
@@ -23,7 +23,7 @@
             <div class="text-center fw-bold">
               {% if messages %}
                   {% for message in messages %}
-                      <div class="alert alert-success">{{ message }}</div>
+                      <div class="alert alert-danger">{{ message }}</div>
                   {% endfor %}
               {% endif %}
             </div>
