--- a/app/templates/app/post/history.html
+++ b/app/templates/app/post/history.html
@@ -54,7 +54,13 @@
                                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                             </div>
                                             <div class="modal-body">                            
-                                                MESSAGE WILL BE DISPLAYED HERE
+                                                {% if application.status_JF == 'PENDING' %}
+                                                    PENDING
+                                                {% elif application.status_JF == 'ACCEPTED' %}
+                                                    {{ application.approve }}
+                                                {% else %}
+                                                    {{ application.deny }}
+                                                {% endif %}
                                             </div>
             
                                             <div class="modal-footer">   
