--- a/app/templates/app/search.html
+++ b/app/templates/app/search.html
@@ -65,7 +65,7 @@
         </div>
     </form>
 
-        <!--Đoạn này copy từ home.html (dòng 26 đến 93 bên home.html) (có mấy cái hiện post với pagination)-->
+        <!--từ home.html (dòng 26 đến 93 bên home.html)-->
         <div class="container mt-5">
             <div class="row row-cols-1 row-cols-md-2 g-4">
                 {% for post in posts %}
